--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -13,7 +13,7 @@ optgroup,
 textarea {
 	font-family: $x-font-family-body;
 	line-height: $x-font-leading-body;
-	color: $x-color-words-base;
+	color: $x-color-primary-base;
 	font-weight: 400;
 }
 
