--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -85,12 +85,20 @@
 	padding: $x-space-sm;
 }
 
-.has-purple-color {
+.has-navy-color {
 	color: $x-color-accent-base;
 }
 
-.has-purple-background-color {
+.has-navy-background-color {
 	background-color: $x-color-accent-base;
+}
+
+.has-orange-color {
+	color: $x-color-accent-secondary-base;
+}
+
+.has-orange-background-color {
+	background-color: $x-color-accent-secondary-base;
 }
 
 .has-light-gray-color {
@@ -123,9 +131,10 @@
 .wp-block-file .wp-block-file__button,
 .wp-block-button .wp-block-button__link{
 
-	background-color: $x-color-accent-base;
+	background-color: $x-color-accent-secondary-base;
 	color: $x-color-shade-white;
 	padding: $x-space-xxs $x-space-xs;
+	font-family: $x-font-family-heading;
 	font-size: $x-font-size-sm;
 	line-height: $x-font-leading-body;
 	letter-spacing: $x-font-letter-spacing;
@@ -138,13 +147,10 @@
 	text-transform: uppercase;
 	vertical-align: middle;
 
-	&:hover {
-		background-color: $x-color-accent-light;
-	}
-
+	&:hover,
 	&:active,
 	&:focus {
-		background-color: $x-color-accent-light;
+		background-color: $x-color-shade-gray-10;
 	}
 
 	@include media( tablet ) {
@@ -226,7 +232,9 @@
 
 // !Cover image
 
-.wp-block-cover-image {
+.wp-block-cover-image, 
+.wp-block-cover {
+	background-color: $x-color-accent-base;
 	width: inherit;
 
 	@include media( tablet ) {
@@ -251,11 +259,15 @@
 	h2 {
 		font-weight: 400;
 		padding: $x-space-md;
-		font-family: $x-font-family-body;
+		font-family: $x-font-family-heading;
 		line-height: $x-font-leading-heading;
 		letter-spacing: normal;
 		text-transform: none;
 		margin: 0;
+	}
+
+	&:first-child {
+		margin-top: 0;
 	}
 
 	&.has-background-dim:before {
