--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -1,9 +1,9 @@
 
-$primary-color:   #6e7381; // body text 
+$primary-color:   #222; // body text 
 
-$secondary-color: #121733; // headings #2a4858
+$secondary-color: #09BC8A; // headings #2a4858
 
-$accent-color: #5f4bb6; // experimental 
+$accent-color: #D62246; // experimental 
 
 $x-color-primary-base:  $primary-color;
 $x-color-primary-dark:  shade( $primary-color, 20% );
