--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -20,8 +20,8 @@ textarea {
 .site-title,
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-	color: $x-color-words-heading;
-	font-weight: 800;
+	color: $x-color-primary-base;
+	font-weight: 300;
 	font-family: $x-font-family-heading;
 	line-height: $x-font-leading-heading;
 }
