--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -1,7 +1,7 @@
 
 $primary-color:   #222; // body text 
 
-$secondary-color: #09BC8A; // headings #2a4858
+$secondary-color: #6E97B4; // headings #2a4858
 
 $accent-color: #D62246; // experimental 
 
