--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -1,9 +1,9 @@
 
 $primary-color:   #222; // body text 
 
-$secondary-color: #6E97B4; // headings #2a4858
+$secondary-color: #C8D3D5; // accent #2a4858
 
-$accent-color: #D62246; // experimental 
+$accent-color: #D62246; // secondary accent 
 
 $x-color-primary-base:  $primary-color;
 $x-color-primary-dark:  shade( $primary-color, 20% );
@@ -20,7 +20,7 @@ $x-color-accent-light: tint( $accent-color, 20% );
 
 /*$x-color-shade-black:   #1d1d21;
 $x-color-shade-gray-10: #2e2e31;*/
-$x-color-shade-gray-6:  #91a3b0; // #7b7a7d;
+$x-color-shade-gray-6:  #6E7273; // #7b7a7d;
 $x-color-shade-gray-4:  #8b949d;
 /*
 $x-color-shade-gray-3:  #a8b1b8;
