Add hover color to menu items.

--- a/stylesheets/_site-navigation.scss
+++ b/stylesheets/_site-navigation.scss
@@ -32,7 +32,7 @@
 				display: block;
 
 				&:hover {
-					color: $x-color-shade-white;
+					color: $x-color-words-subtle;
 					text-decoration: none;
 				}
 			}
